[package]
name = "shifter"
version = "0.1.3"
edition = "2021"
license = "MIT"
description = "A CLI tool to rotate lines from stdin by n positions"
keywords = ["cli", "text", "lines", "rotate", "unix-tool"]
categories = ["command-line-utilities", "text-processing"]
repository = "https://github.com/henrikzenkert/shifter"
homepage = "https://github.com/henrikzenkert/shifter"
documentation = "https://docs.rs/shifter"

[[bin]]
name = "shifter"
path = "src/main.rs"

[dependencies]
rand = "0.9.2"


